testcases/error/duplicated_identifier.veryl
module duplicated_identifier {
    let _a: logic = 1;
    let _a: logic = 1;
}
